# TMA4180-Project-1

./: README.md  pyproject.toml
src/project/: GD.py  main.py
