[project]
name = "TMA4212_project"
version = "0.1.0"
description = ""
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "tqdm"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]